--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,12 @@
     <artifactId>CodingTips</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
+
     <modules>
         <module>get-lambda</module>
         <module>post-lambda</module>
         <module>common</module>
+        <module>persistence</module>
     </modules>
 
     <build>
