--- a/tips-stream-listener-lambda/pom.xml
+++ b/tips-stream-listener-lambda/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>get-lambda</artifactId>
+    <artifactId>tips-stream-listener-lambda</artifactId>
 
     <build>
         <plugins>
@@ -39,19 +39,15 @@
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.nickvanhoof</groupId>
-            <artifactId>persistence</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.6</version>
         </dependency>
         <dependency>
-            <groupId>com.squareup.okhttp3</groupId>
-            <artifactId>okhttp</artifactId>
-            <version>3.13.1</version>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>1.4.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>io.lumigo</groupId>
@@ -71,7 +67,5 @@
             <url>http://maven.nuiton.org/release/</url>
         </repository>
     </repositories>
-
-
 
 </project>
